--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -4915,7 +4915,7 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > td.dtr-control:before {
   padding-bottom: 190px;
 }
 .hero-section.bg-ico-hero {
-  background-image: url("../images/crypto/bg-ico-hero.jpg");
+  background-image: url("../images/bg-ico-hero.jpg");
   background-size: cover;
   background-position: top;
 }
